<resources>
    <string name="app_name">Colors</string>
    <string name="lbl_red">Red</string>
    <string name="lbl_green">Green</string>
    <string name="lbl_blue">Blue</string>
    <string name="lbl_alpha">Alpha</string>
    <!--Options Menu labels/options -->
    <string name="lblOpTransparent">Transparent</string>
    <string name="lblOpSemitransparent">Semitransparent</string>
    <string name="lblOpOpaque">Opaque</string>
    <string name="lblOpBlack">Black</string>
    <string name="lblOpWhite">White</string>
    <string name="lblOpRed">Red</string>
    <string name="lblOpGreen">Green</string>
    <string name="lblOpBlue">Blue</string>
    <string name="lblOpCyan">Cyan</string>
    <string name="lblOpMagenta">Magenta</string>
    <string name="lblOpYellow">Yellow</string>
    <string name="lblOpReset">Reset</string>
    <string name="lblOpAboutof">About of</string>
    <string name="lblHelp">Help</string>
    <string name="lblOpColors">Colors</string>
    <string name="lblOpClose_app">Close app</string>

    <string name="lblFacultad">Faculty of Engineering</string>
    <string name="lblPrograma">Systems engineering program</string>
    <string name="lblSemestre">Seventh semester</string>
    <string name="lblElectiva">Programming in Android Studio</string>

    <string name="txt_commit">Commit</string>
    <string name="Color">Color</string>

</resources>
